# SPO

./: .gitignore  README.md  app.py  generate_lock_from_requirements.sh  pyproject.toml  requirements.lock.txt
config/: config2.yaml
metagpt/ext/spo/components/: optimizer.py
metagpt/ext/spo/settings/: python工程师.yaml  shell 编辑器.yaml  代码编辑器.yaml  根因分析.yaml
metagpt/ext/spo/utils/: llm_client.py
